alignment fixes

--- a/angular-app/src/app/searchresult/searchresult.component.scss
+++ b/angular-app/src/app/searchresult/searchresult.component.scss
@@ -604,3 +604,7 @@ col-sm-3 col-md-3{
 .back{
   float: left;
 }
+
+.container-fluid{
+  margin-left: 25%;
+}
